--- a/css float.html
+++ b/css float.html
@@ -38,7 +38,7 @@
   <div class="cat">
     <h2>CatCSS</h2>
 
-    <img src="cat.jpeg" alt="cat in a box" />
+    <img src="./images/cat.jpeg" alt="cat in a box" />
     <p class="first-paragraph">Nap all day cat dog hate mouse eat string barf pillow no baths hate everything but kitty
       poochy. Sleep on keyboard
       toy
@@ -48,7 +48,7 @@
   </div>
   <div class="dog">
     <h2>DogCSS</h2>
-    <img src="dog.jpeg" alt="dogs in a box" />
+    <img src="./images/dog.jpeg" alt="dogs in a box" />
     <p class="second-paragraph">Heckin good boys and girls long woofer big ol wow very biscit long woofer heck what a
       nice
       floof, long doggo noodle
